--- a/index.html
+++ b/index.html
@@ -1,102 +1,156 @@
-<!-- Seção de Análise - Código Separado -->
-<div id="quiz-container" style="max-width:480px; margin: 20px auto; background: rgba(255,255,255,0.95); border-radius:12px; padding:16px; box-shadow:0 6px 20px rgba(0,0,0,0.1); font-family:'Rubik',sans-serif;">
-  <h1 style="text-align:center; font-size:1.3rem; font-weight:700; color:#222; line-height:1.3;">
-    Calculando resultados e criando seu relatório personalizado 
-    <span class="dots"><span>.</span><span>.</span><span>.</span></span>
-  </h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Seção de Análise Responsiva</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 10px;
+      font-family: 'Rubik', sans-serif;
+      background: #f5f5f5;
+      display: flex;
+      justify-content: center;
+    }
 
-  <div class="progress-container" style="margin-top:20px;">
-    <div class="progress-step" style="margin-bottom:20px;">
-      <p style="display:flex; justify-content:space-between; font-weight:500; font-size:0.9rem; margin-bottom:6px; color:#555;">
-        <span>Analisando seus padrões e respostas</span><span id="label1">0%</span>
-      </p>
-      <progress id="bar1" value="0" max="100" style="width:100%; height:12px; border-radius:10px; appearance:none; background-color:#e0e0e0;"></progress>
-    </div>
+    #quiz-container {
+      width: 100%;
+      max-width: 480px;
+      background: rgba(255,255,255,0.95);
+      border-radius: 12px;
+      padding: 16px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      box-sizing: border-box;
+    }
 
-    <div class="progress-step" style="margin-bottom:20px;">
-      <p style="display:flex; justify-content:space-between; font-weight:500; font-size:0.9rem; margin-bottom:6px; color:#555;">
-        <span>Análise de Crescimento e Evolução</span><span id="label2">0%</span>
-      </p>
-      <progress id="bar2" value="0" max="100" style="width:100%; height:12px; border-radius:10px; appearance:none; background-color:#e0e0e0;"></progress>
-    </div>
+    h1 {
+      font-size: 1.3rem;
+      font-weight: 700;
+      text-align: center;
+      line-height: 1.3;
+      color: #222;
+      margin-bottom: 20px;
+    }
 
-    <div class="progress-step" style="margin-bottom:20px;">
-      <p style="display:flex; justify-content:space-between; font-weight:500; font-size:0.9rem; margin-bottom:6px; color:#555;">
-        <span>Inspeção de Dinâmica de Interação</span><span id="label3">0%</span>
-      </p>
-      <progress id="bar3" value="0" max="100" style="width:100%; height:12px; border-radius:10px; appearance:none; background-color:#e0e0e0;"></progress>
-    </div>
+    .dots span {
+      animation: blink 1s infinite;
+      margin-left: 2px;
+      font-weight: 700;
+      font-size: 1.5rem;
+      line-height: 1;
+      color: #f2c94c;
+    }
+    .dots span:nth-child(2) { animation-delay: 0.2s; }
+    .dots span:nth-child(3) { animation-delay: 0.4s; }
 
-    <div class="progress-step">
-      <p style="display:flex; justify-content:space-between; font-weight:500; font-size:0.9rem; margin-bottom:6px; color:#555;">
-        <span>Decodificando seus comportamentos e tendências</span><span id="label4">0%</span>
-      </p>
-      <progress id="bar4" value="0" max="100" style="width:100%; height:12px; border-radius:10px; appearance:none; background-color:#e0e0e0;"></progress>
+    @keyframes blink {
+      0%,20%,100% { opacity: 0; }
+      50% { opacity: 1; }
+    }
+
+    .progress-container {
+      width: 100%;
+    }
+
+    .progress-step {
+      margin-bottom: 18px;
+    }
+
+    .progress-step p {
+      display: flex;
+      justify-content: space-between;
+      font-weight: 500;
+      font-size: 0.9rem;
+      margin-bottom: 6px;
+      color: #555;
+    }
+
+    progress {
+      width: 100%;
+      height: 12px;
+      border-radius: 10px;
+      appearance: none;
+      -webkit-appearance: none;
+      background-color: #e0e0e0;
+      overflow: hidden;
+    }
+
+    progress::-webkit-progress-bar { background-color:#e0e0e0; border-radius:10px; }
+    progress::-webkit-progress-value { 
+      background: linear-gradient(90deg, #f2c94c, #f2994a);
+      border-radius:10px;
+      transition: width 0.3s ease;
+    }
+    progress::-moz-progress-bar {
+      background: linear-gradient(90deg, #f2c94c, #f2994a);
+      border-radius:10px;
+      transition: width 0.3s ease;
+    }
+
+    @media (max-width: 420px) {
+      h1 { font-size: 1.1rem; }
+      .progress-step p { font-size: 0.85rem; }
+      progress { height: 10px; }
+    }
+  </style>
+</head>
+<body>
+  <div id="quiz-container">
+    <h1>Calculando resultados e criando seu relatório personalizado 
+      <span class="dots"><span>.</span><span>.</span><span>.</span></span>
+    </h1>
+
+    <div class="progress-container">
+      <div class="progress-step">
+        <p><span>Analisando seus padrões e respostas</span><span id="label1">0%</span></p>
+        <progress id="bar1" value="0" max="100"></progress>
+      </div>
+      <div class="progress-step">
+        <p><span>Análise de Crescimento e Evolução</span><span id="label2">0%</span></p>
+        <progress id="bar2" value="0" max="100"></progress>
+      </div>
+      <div class="progress-step">
+        <p><span>Inspeção de Dinâmica de Interação</span><span id="label3">0%</span></p>
+        <progress id="bar3" value="0" max="100"></progress>
+      </div>
+      <div class="progress-step">
+        <p><span>Decodificando seus comportamentos e tendências</span><span id="label4">0%</span></p>
+        <progress id="bar4" value="0" max="100"></progress>
+      </div>
     </div>
   </div>
-</div>
 
-<!-- Estilos da animação de pontos -->
-<style>
-.dots span {
-  animation: blink 1s infinite;
-  margin-left: 2px;
-  font-weight: 700;
-  font-size: 1.5rem;
-  line-height: 1;
-  color: #f2c94c;
-}
-.dots span:nth-child(2) { animation-delay: 0.2s; }
-.dots span:nth-child(3) { animation-delay: 0.4s; }
+  <script>
+    const steps = [
+      { id: 'bar1', label: 'label1' },
+      { id: 'bar2', label: 'label2' },
+      { id: 'bar3', label: 'label3' },
+      { id: 'bar4', label: 'label4' }
+    ];
 
-@keyframes blink {
-  0%,20%,100% { opacity: 0; }
-  50% { opacity: 1; }
-}
+    let current = 0;
 
-progress::-webkit-progress-bar { background-color:#e0e0e0; border-radius:10px; }
-progress::-webkit-progress-value { 
-  background: linear-gradient(90deg, #f2c94c, #f2994a);
-  border-radius:10px;
-  transition: width 0.3s ease;
-}
-progress::-moz-progress-bar {
-  background: linear-gradient(90deg, #f2c94c, #f2994a);
-  border-radius:10px;
-  transition: width 0.3s ease;
-}
-</style>
+    function animateStep() {
+      if(current >= steps.length) return;
+      const step = steps[current];
+      const bar = document.getElementById(step.id);
+      const label = document.getElementById(step.label);
+      let value = 0;
 
-<!-- Script de animação das barras -->
-<script>
-const steps = [
-  { id: 'bar1', label: 'label1' },
-  { id: 'bar2', label: 'label2' },
-  { id: 'bar3', label: 'label3' },
-  { id: 'bar4', label: 'label4' }
-];
-
-let current = 0;
-
-function animateStep() {
-  if(current >= steps.length) return;
-  const step = steps[current];
-  const bar = document.getElementById(step.id);
-  const label = document.getElementById(step.label);
-  let value = 0;
-
-  const interval = setInterval(() => {
-    value++;
-    bar.value = value;
-    label.textContent = value + '%';
-
-    if(value >= 100) {
-      clearInterval(interval);
-      current++;
-      setTimeout(animateStep, 250); // pequena pausa
+      const interval = setInterval(() => {
+        value++;
+        bar.value = value;
+        label.textContent = value + '%';
+        if(value >= 100) {
+          clearInterval(interval);
+          current++;
+          setTimeout(animateStep, 250);
+        }
+      }, 70);
     }
-  }, 70);
-}
 
-window.addEventListener('load', animateStep);
-</script>
+    window.addEventListener('load', animateStep);
+  </script>
+</body>
+</html>
